--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.2",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
