--- a/backend/package.json
+++ b/backend/package.json
@@ -28,11 +28,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0"
   }
 }
